grok/tests/syntaxerror/syntaxerror.seru
function<void> DoSomething(foobars int) {
    /// [f]
    foobars.
}